Ajout multi cube

--- a/App/index.html
+++ b/App/index.html
@@ -12,7 +12,7 @@
     <script src="./debug/webgl-debug.js"></script>
 
     <!--import application script-->
-    <script src="./js/classes/ClassPlanetTest.js"></script>
+    <script src="./js/classes/Planet.js"></script>
     <script src="./js/classes/Scene.js"></script>
     <script src="./js/classes/Orbit.js"></script>
 
@@ -49,7 +49,7 @@
     <br>
       Projet de simulation d'un systeme solaire en utilisant WebGL
     </br>
-    <canvas id="webgl-canvas" width="900" height="800">
+    <canvas id="webgl-canvas" width="2000" height="750">
       HTML5 is not supported
     </canvas>
   </body>
