--- a/App/index.html
+++ b/App/index.html
@@ -15,6 +15,7 @@
     <script src="./js/classes/Planet.js"></script>
     <script src="./js/classes/Scene.js"></script>
     <script src="./js/classes/Orbit.js"></script>
+    <script src="./js/classes/System.js"></script>
 
     <!--Vertex Shader-->
     <script id="shader-vs" type="x-shader/x-vertex">
@@ -49,7 +50,7 @@
     <br>
       Projet de simulation d'un systeme solaire en utilisant WebGL
     </br>
-    <canvas id="webgl-canvas" width="2000" height="750">
+    <canvas id="webgl-canvas" width="1000" height="750">
       HTML5 is not supported
     </canvas>
   </body>
